--- a/Map-Viewer/bin/fxmlFiles/UIMapviewer.fxml
+++ b/Map-Viewer/bin/fxmlFiles/UIMapviewer.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -45,11 +44,7 @@
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Label>
-                  <ImageView fitHeight="80.0" fitWidth="159.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../Resources/Buttons/Diamondhunterlogo.png" />
-                     </image>
-                  </ImageView>
+                  <ImageView fx:id="Logo" fitHeight="80.0" fitWidth="159.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="413.0" prefWidth="158.0" style="-fx-background-color: #000000;" styleClass="background">
@@ -59,11 +54,7 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                      <graphic>
-                        <ImageView fitHeight="80.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../Resources/Buttons/PlaceBoat.png" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="placeBoatButton" fitHeight="80.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true" />
                      </graphic>
                   </Button>
                   <Button layoutX="2.0" layoutY="61.0" mnemonicParsing="false" onAction="#PlaceAxe" prefHeight="80.0" prefWidth="154.0" style="-fx-background-color: #000000;">
@@ -71,32 +62,20 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                      <graphic>
-                        <ImageView fitHeight="80.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../Resources/Buttons/PlaceAxe.png" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="placeAxeButton" fitHeight="80.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true" />
                      </graphic>
                   </Button>
                   <Label fx:id="cords" layoutX="14.0" layoutY="14.0" style="-fx-text-fill: #FFFFFF;" styleClass="brightlabel" text="Label" />
                   <Button layoutX="16.0" layoutY="347.0" mnemonicParsing="false" onAction="#Reset" prefHeight="40.0" prefWidth="131.0" style="-fx-background-color: #000000;" textAlignment="CENTER">
                      <graphic>
-                        <ImageView fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../Resources/Buttons/ResetButton.png" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="resetButton" fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" />
                      </graphic>
                   </Button>
                   <Label fx:id="cordsAxe" layoutX="14.0" layoutY="147.0" style="-fx-text-fill: #FFFFFF;" styleClass="brightlabel" text="Axe co-ordinates:" />
                   <Label fx:id="cordsBoat" layoutX="14.0" layoutY="281.0" style="-fx-text-fill: #FFFFFF;" styleClass="brightlabel" text="Boat co-ordinates:" />
                   <Button layoutX="24.0" layoutY="397.0" mnemonicParsing="false" onAction="#Play" style="-fx-background-color: #000000;">
                      <graphic>
-                        <ImageView fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../Resources/Buttons/Play.png" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="playButton" fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" />
                      </graphic>
                   </Button>
                </children>
